@@ -262,3 +262,4 @@ Jimmy Bergman
 Konstantin Khomoutov
 Josip Rodin
 Dann Frazier
+Stephane Chazelas
